--- a/home.html
+++ b/home.html
@@ -35,16 +35,16 @@
 		#indexNav {display: block; text-align: right; width: 80%; margin: 0 auto;}
 		#indexNav a {color: #FFF; text-decoration: none; margin: 0px 50px 0 0; font: 500 18px/100px 'Alegreya Sans';}
 		#indexNav a:hover {color: #ffb977;}
-		#indexNav .upNav {color: #f4f260;}
+		.upNav {color: #ffff00;}
 		.anim {animation: otros 1s; animation-duration: 3s;}
 		@keyframes logoIntro {from {width:0%; opacity: 0;} to {width: 80%; opacity: 1;}}
         @keyframes otros {0% {opacity: 0;} 50% {opacity: 0;} 100% {opacity: 1;}}
-		#store, #wcs p a {display: inline-block; background-image: linear-gradient(#ff9600, #e25a00); border:1px solid #e08400; border-radius: 10px; text-align: center; color: #FFF; text-decoration: none; font: 400 22px/45px "Alegreya Sans"; width: 180px; margin: 20px 0 45px; padding-top: 2px; }
+		#store, #wcs p a, .goplus {display: inline-block; background-image: linear-gradient(#ff9600, #e25a00); border:1px solid #e08400; border-radius: 10px; text-align: center; color: #FFF; text-decoration: none; font: 400 22px/45px "Alegreya Sans"; width: 180px; margin: 20px 0 45px; padding-top: 2px; }
 		#mainSocial a {color: #FFF; text-decoration: none; font-size: 35px; margin: 0 10px;}
 		#mainSocial a:hover {color: rgb(182, 232, 241);}
 		#inicio p, #mainSocial a, #inicio h3 {text-shadow:2px 2px 0px rgba(0, 0, 0, 0.2)/*, 3px 0px 6px #081153*/;}
 		#mainCredits {display: block; background: #044c71; width: 100%; text-align: center; position: absolute; bottom: 0%; line-height: 35px;}
-		#mainCredits a {color: #ffff00; text-decoration: underline;}
+		#mainCredits a {text-decoration: underline;}
 		#chum {background: url('../img/background.png') center top no-repeat; height: 965px;}
 		#freezer {background: url('../img/background.png') center -965px no-repeat; height: 1290px;}
 		#nicte {background: url('../img/background.png') center -2254px no-repeat; height: 875px;}
@@ -123,6 +123,27 @@
 		.cosplayStars .slick-slide {margin: 0 45px; height: 465px; }
 		.cosplayStars .slick-slide:nth-child(even) img {margin-top: 195px;}
 		.cosplayStars .slick-slide p {position: relative; top: -30px; right: 10%; text-align: end; font-size: 14px; font-weight: 500;}
+		#boletos {padding: 75px 0; background: #044c71; }
+		#gen {display: flex; flex-direction: row; background: #FFF; color: #0076b5;}
+		#gen .ticketImg {background: url('../img/gen-bg.jpg'); width: 25%; min-width: 250px; margin: 0 25px 0 0; display: flex; align-items: center; justify-items: center;}
+		#genTxt {margin-right: 25px;}
+		#tickets {display: flex; flex-direction: row; justify-content: space-around; flex-wrap: wrap;}
+		.ticket {display:flex; flex-direction: column; width: 45%; min-width: 285px; background: #FFF; border: 2px solid #FFF; color: #0076b5; padding-bottom: 25px; margin-top: 35px;}
+		.ticket p, .ticket h3 { display: block; margin: 10px auto 10px;}
+		.ticket h3 {height: 50px; text-align: center;}
+		.ticket div {width: 85%; margin: 5px auto 25px; min-height: 305px;}	
+		.ticketImg {display: block; text-align: center; color: #FFF; font: 700 28px/20px "Alegreya Sans"; text-decoration:none; padding:0px 0 25px; margin-bottom:20px;}
+		.reg .ticketImg {background: url('../img/reg-bg.jpg');}
+		.vip .ticketImg {background: url('../img/vip-bg.jpg');}
+		.free {padding: 20px; background: #dbf6ff;}
+		.ticketImg img {display: block; margin: 0 auto; margin: 35px auto 25px;}
+		.ticketImg b {text-shadow:2px 0px 2px rgba(0, 0, 0, 0.5), 2px 0px 2px #081153}
+		.goplus {width: 85%; margin: auto; position: relative; bottom: 0;}
+		.vip .goplus {background: #f88800 url('../img/money.png') left bottom no-repeat;}
+		.vip .goplus:hover {background: #faa237 url('../img/money.png') left bottom no-repeat;}
+		.reg .goplus {background: #299ed9; border-color:#299ed9; }
+		.reg .goplus:hover {background:#69b9e1; }
+
 		#final {background: #FFF; padding-top: 25px; border-top: 4px solid #0076b5;}
 		#final p {margin: 0; text-align: center; padding: 20px 0; background: #0076b5;}
 		#final .wrapper, #patron, #bottomNav, #bottomNav div {display: flex; flex-direction: row; flex-shrink: 0; flex-wrap: wrap; justify-content: space-around; align-items: center;}
@@ -239,7 +260,7 @@
 					<a href="https://www.youtube.com/channel/UCUMB1CzczAPzX72L1lP2BVw" class="fab fa-youtube"></a>
 				</div>
 			</div>
-			<div id="mainCredits">Con-X: Convención Geek y WCS Costa Rica son propiedad de <a href="#">Plus Ultra!</a></div>
+			<div id="mainCredits">Con-X: Convención Geek y WCS Costa Rica son propiedad de <a href="#" class="upNav">Plus Ultra!</a></div>
 		</div>
 		<div class="scrollContent">
 			<div id="chum" class="scene">					
@@ -492,7 +513,45 @@
 			</div>
 		</div>
 		<div id="boletos">
-
+			<div class="wrapper">
+				<h2>Entrada General:</h2>
+				<p>Con-X: Convención Geek le espera este 5 de Mayo, en el recinto más espetacular de nuestro país, desde ya le damos la bienvenida al Centro de Convenciones de Costa Rica (CCCR). Un lugar completamente equipado para comodidad de todos los asistentes.</p>
+				<div id="gen">
+					<div class="ticketImg"><img src="/img/x.png" alt="entrada general"></div>
+					<div id="genTxt">
+						<h3>Valor: ₡10,000 colones.</h3>
+						<p>La entrada general se pondrá <u>a la venta el mismo día del evento</u> y tendrá un valor de ₡10,000.00 colones para todo público. La compra se podrá realizar con tarjeta de crédito o efectivo. Recomendamos a los asistentes llevar el monto completo y adquirir sus boletos únicamente en las boleterías oficiales dentro del CCCR.</p>
+						<p class="free"><strong>Entrada gratis para:</strong><br>- Niños menores de 12 años.<br>- Adultos mayores.<br>- Personas con discapacidad.</p>
+						</p>				 
+					</div>
+				</div>
+				<h2>Paquetes Promocionales Con-X.</h2>
+				<p><u>Ahorre dinero comprando los productos promocionales de Con-X: Convención Geek</u>, a través de nuestra nueva tienda en línea: <a href="https//plus-ultra.io" target="_blank" class="upNav">Plus-Ultra.io</a>, allí usted podrá adquirir todos los artículos oficiales de la convención y comprar con toda comodidad desde su casa u oficina.</p> 
+				<p>Encuentre también figuras y artículos exclusivos 100% originales e importados desde el Japón, ¡todo a muy buenos precios!.</p>
+				<div id="tickets">					
+					<div class="ticket reg">
+						<a href="#" class="ticketImg"><img src="/img/x.png" alt="entrada general"><b>X PACK</b></a>
+						<h3>Valor: ₡10,000 colones.<br><small>($16.50 dólares)*</small></h3>
+						<div>
+							<p class="where">Exclusivo de la tienda en línea.</p>
+							<p><strong>Incluye:</strong><br>+ Set de 3 postales exclusivas, diseñadas por reconocidos artitas e ilustradores costarricenses con reconocimiento internacional.<br> Todas son: <b>100% coleccionables</b>.</p>
+							<p class="free">La compra de este producto le obsequia un acceso de cortesía a Con-X: Convención Geek</p>
+						</div>
+						<a href="#" class="goplus" target="_blank">COMPRAR</a>
+					</div>
+					<div class="ticket vip">
+						<a href="#" class="ticketImg"><img src="/img/x.png" alt="entrada general"><b>GEEK PACK XL</b></a>
+						<h3>Valor: ₡40,000 colones.<br><small>($66.00 dólares)*</small></h3>
+						<div>
+							<p class="where">Exclusivo de la tienda en línea.</p>
+							<p><strong>Incluye:</strong><br>+ Set de postales exclusivas.<br>+ Camiseta oficial del evento.<br>+ Poster Premium y autógrafo Chumlee.<br>+ Poster Premium y autógrafo [actor de voz].<br>+ Regalia de los patrocinadores.<br>+ Acceso premium frente a tarima</p>
+							<p class="free">La compra de este producto le obsequia un acceso de cortesía a Con-X: Convención Geek</p>
+						</div>
+						<a href="#" class="goplus" target="_blank">COMPRAR.</a>
+					</div>
+				</div>
+				<p>(*) De momento, nuestro procesador de tarjetas de crédito y débito recibe el pago en moneda dólares únicamente, pedimos disculpas por los inconvenientes que esta situación pueda provocar.</p>
+			</div>
 		</div>
 		<div id="final">
 			<div class="wrapper">
