--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		#indexNav {display: block; text-align: right; width: 80%; margin: 0 auto;}
 		#indexNav a {color: #FFF; text-decoration: none; margin: 0px 50px 0 0; font: 500 18px/100px 'Alegreya Sans';}
 		#indexNav a:hover {color: #ffb977;}
-		#indexNav .upNav {color: #f4f260;}
+		.upNav {color: #ffff00 !important;}
 		.anim {animation: otros 1s; animation-duration: 3s;}
 		@keyframes logoIntro {from {width:0%; opacity: 0;} to {width: 80%; opacity: 1;}}
         @keyframes otros {0% {opacity: 0;} 50% {opacity: 0;} 100% {opacity: 1;}}
@@ -44,7 +44,7 @@
 		#mainSocial a:hover {color: rgb(182, 232, 241);}
 		#inicio p, #mainSocial a, #inicio h3 {text-shadow:2px 2px 0px rgba(0, 0, 0, 0.2)/*, 3px 0px 6px #081153*/;}
 		#mainCredits {display: block; background: #044c71; width: 100%; text-align: center; position: absolute; bottom: 0%; line-height: 35px;}
-		#mainCredits a {color: #ffff00; text-decoration: underline;}
+		#mainCredits a {text-decoration: underline;}
 		#chum {background: url('../img/background.png') center top no-repeat; height: 965px;}
 		#freezer {background: url('../img/background.png') center -965px no-repeat; height: 1290px;}
 		#nicte {background: url('../img/background.png') center -2254px no-repeat; height: 875px;}
@@ -60,13 +60,13 @@
 		#carroviejo {width:409.48px; height:102.66px; background: url('../img/carroviejo.svg')no-repeat; position: relative; top:-725px; left: 0px;}
 		#pawnshop {width:698.57px; height:471.49px; background: url('../img/pawnshop.png')no-repeat; position: relative; top: -360px; left:calc(50% + 20px);}
 		#goku {width:160.33px; height:100.59px; position: relative; top:105px; left:100%; background:url('../img/goku.png') no-repeat; background-size: contain;}
-		#ship {width:555.03px; height:297.30px; position: relative; top:200px; left:calc(50% + 85px); background:url('../img/ship.svg') no-repeat;}
-		#shipshadow {width:555.03px; height:297.30px; position: relative; top:750px; left:calc(50% + 85px); background:url('../img/shipshadow.svg') no-repeat;}
-		#fogR {width:161.22px; height:126.50px; position: relative; top:110px; left:calc(50% + 575px); background:url('../img/fogR.png') no-repeat;}
-		#fogL {width:148.33px; height:91.55px; position: relative; top:0px; left:calc(50% - 0px); background:url('../img/fogL.png') no-repeat;}
+		#ship {width:194px; height:194px; position: relative; top:200px; left:calc(50% + 250px); background:url('../img/ship.png') no-repeat;}
+		#shipshadow {width:376px; height:128px; position: relative; top:595px; left:calc(50% + 140px); background:url('../img/shipshadow.png') no-repeat;}
+		#fogR {width:161.22px; height:126.50px; position: relative; top:270px; left:calc(50% + 575px); background:url('../img/fogR.png') no-repeat;}
+		#fogL {width:148.33px; height:91.55px; position: relative; top:160px; left:calc(50% - 0px); background:url('../img/fogL.png') no-repeat;}
 		#alina {width:197.66px; height:341.75px; position: relative; top:252px; left:calc(50% + 282px); background:url('../img/alina.png') no-repeat;}
 		#chumlee {position: relative; top:-740px; left:0;}
-		#reyero {position: relative; top:-500px; right:0;}
+		#reyero {position: relative; top:-280px; left:120%;}
 		#infomex {position: relative; top:-80px; left:0;}
 		.pop {background: #0078B5; font-size: 16px; font-weight: 300; display: flex; align-items: center; text-align: left; width: 500px; border-radius: 25px; padding: 20px;}
 		.pop img {flex-shrink: 0; border: 1px solid #FFF; margin-right: 20px;}
@@ -106,7 +106,7 @@
 			animation: rotate 25s linear infinite;}
 		#sportcar {width:198px; height:47px; background:url('../img/sportcar.svg') no-repeat; position: relative; top:-310px; left: -100%;
 			animation: leftToRight 25s linear infinite;}
-		#dune {width:158.96px; height:137.95px; background:url('../img/dune.png') no-repeat; position: relative; top:115px; left: -20%;
+		#dune {width:158.96px; height:137.95px; background:url('../img/dune.png') no-repeat; position: relative; top:375px; left: -20%;
 			animation: rotate 5s linear infinite;}
 		.slick-slider {width: 90%;} 
 		.slick-prev {left: 0; z-index: 100; background: #0078b5 url('../img/leftArrow.png') center center no-repeat;}
@@ -123,6 +123,26 @@
 		.cosplayStars .slick-slide {margin: 0 45px; height: 465px; }
 		.cosplayStars .slick-slide:nth-child(even) img {margin-top: 195px;}
 		.cosplayStars .slick-slide p {position: relative; top: -30px; right: 10%; text-align: end; font-size: 14px; font-weight: 500;}
+		#boletos {padding: 75px 0; }
+		#gen {display: flex; flex-direction: row; background: #FFF; color: #0076b5;}
+		#gen .ticketImg {background: url('../img/gen-bg.jpg'); width: 25%; min-width: 250px; margin: 0 25px 0 0; display: flex; align-items: center; justify-items: center;}
+		#genTxt {margin-right: 25px;}
+		#tickets {display: flex; flex-direction: row; justify-content: space-around; flex-wrap: wrap;}
+		.ticket {display:flex; flex-direction: column; width: 45%; min-width: 285px; background: #FFF; border: 2px solid #FFF; color: #0076b5; padding-bottom: 25px; margin-top: 35px;}
+		.ticket p, .ticket h3 { display: block; margin: 10px auto 10px;}
+		.ticket h3 {height: 50px; text-align: center;}
+		.ticket div {width: 85%; margin: 5px auto 25px; min-height: 305px;}	
+		.ticketImg {display: block; text-align: center; color: #FFF; font: 700 28px/20px "Alegreya Sans"; text-decoration:none; padding:0px 0 25px; margin-bottom:20px;}
+		.reg .ticketImg {background: url('../img/reg-bg.jpg');}
+		.vip .ticketImg {background: url('../img/vip-bg.jpg');}
+		.free {padding: 20px; background: #dbf6ff;}
+		.ticketImg img {display: block; margin: 0 auto; margin: 35px auto 25px;}
+		.ticketImg b {text-shadow:2px 0px 2px rgba(0, 0, 0, 0.5), 2px 0px 2px #081153}
+		.goplus {width: 85%; margin: auto; position: relative; bottom: 0;}
+		.vip .goplus {background: #f88800 url('../img/money.png') left bottom no-repeat;}
+		.vip .goplus:hover {background: #faa237 url('../img/money.png') left bottom no-repeat;}
+		.reg .goplus {background: #299ed9 url('../img/money.png') left bottom no-repeat; border-color:#299ed9; }
+		.reg .goplus:hover {background:#69b9e1 url('../img/money.png') left bottom no-repeat; }
 		#final {background: #FFF; padding-top: 25px; border-top: 4px solid #0076b5;}
 		#final p {margin: 0; text-align: center; padding: 20px 0; background: #0076b5;}
 		#final .wrapper, #patron, #bottomNav, #bottomNav div {display: flex; flex-direction: row; flex-shrink: 0; flex-wrap: wrap; justify-content: space-around; align-items: center;}
@@ -170,6 +190,7 @@
 			#store {margin: 15px 0 30px;}
 			#indexNav {text-align: center;}
 			#chumlee {top:-760px;}
+			.ticket div {height: 350px;}
 		}
 		@media screen and (max-width:751px) {
 			#inicio {background-image: url('../img/convencion-anime.jpg'); background-size: unset;}
@@ -181,6 +202,7 @@
 			.pop {flex-direction: column; width: 450px; left: calc(50% - 245px) !important;}
 			.pop img {margin: 0px 0px 20px 0px;}
 			#bottomNav, #patron {width: 100%;}
+			.ticket div {height: 375px;}
 		}
 		@media screen and (max-width:546px) {
 			#logoSec{top: calc(50% + -200px);}
@@ -198,7 +220,14 @@
 			.pop {width: 300px; left: calc(50% - 170px) !important;}
 			#cosplay h2 {font-size: 35px;}
 			.marco img {filter: contrast(100%) brightness(100%);}
+			#gen {flex-direction: column; align-items: center; width: 90%; margin: 0 auto; border: 2px solid #FFF;}
+			#gen .ticketImg {width: 100%; margin: 0px; padding: 0px;}
+			#gen .ticketImg img {margin: 15px auto;}
+			#genTxt {margin: 0 25px;}
+			#genTxt h3 {text-align: center;}
 			.light {opacity: 1;}
+			.ticket {width: 90%;}
+			.ticket div {height: initial;}
 		}
 	</style>
 	<script>
@@ -272,7 +301,7 @@
 							]);
 					var scene = new ScrollMagic.Scene({triggerElement: "#ferris", duration: 1200})
 						.setTween(reveal)
-						.reverse (false)
+//						.reverse (false)
 						.addTo(controller);
 				</script>					
 			</div>
@@ -299,20 +328,23 @@
 				<script>
 					var scene = new ScrollMagic.Scene({triggerElement: "#goku", duration: 1200})
 						.setTween("#goku", 1, {left:'0%', width:'10px'})
-						.reverse (false)
+//						.reverse (false)
 						.addTo(controller);					
 					var freezer = new TimelineMax()
 						.add([
-							TweenMax.fromTo("#ship", 150, {top: "-460px", opacity: 0}, {top: "200px", opacity: 1}),
-							TweenMax.fromTo("#shipshadow", 150, {opacity: 0.2}, {opacity: 1, delay: 70}),
-							TweenMax.fromTo(["#fogR", "#fogL" ], 0.5, {opacity: 0}, {opacity: 0.5, delay:120}),
-							TweenMax.fromTo(["#fogR", "#fogL" ], 1, {opacity: 0.5}, {opacity: 0, delay:150}),
-							TweenMax.fromTo("#reyero", 100, {left:"100%", opacity:0}, {left:"15%", opacity:1})
+							TweenMax.fromTo("#ship", 75, {top: "-460px", opacity: 0}, {top: "375px", opacity: 1}),
+							TweenMax.fromTo("#shipshadow", 5, {opacity: 0.0}, {opacity: 1, delay: 75}),
+							TweenMax.fromTo(["#fogR", "#fogL" ], 10, {opacity: 0}, {opacity: 0.5, delay:75}),
+							TweenMax.fromTo(["#fogR", "#fogL" ], 10, {opacity: 0.5}, {opacity: 0, delay:100})
 							]);
-					var scene = new ScrollMagic.Scene({triggerElement: "#goku", duration: 900})
+					var scene = new ScrollMagic.Scene({triggerElement: "#goku", duration: 700})
 						.setTween(freezer)
-						.reverse (false)
+//						.reverse (false)
 						.addTo(controller);
+
+					var scene = new ScrollMagic.Scene({triggerElement: "#goku", duration: 500})
+						.setTween("#reyero", 1, {left:"15%", opacity:1})
+						.addTo(controller);	
 
 					var rotateDune = new TimelineMax({repeat: -1, yoyo: false})
 						.add(TweenMax.to("#dune", 20, {left: "0%", left: "120%", rotation: 0}));
@@ -345,7 +377,7 @@
 							]);					
 					var scene = new ScrollMagic.Scene({triggerElement: "#trigger", duration: 600})
 						.setTween(alina)
-						.reverse(false)
+//						.reverse(false)
 //						.addIndicators({name: "freexer (duration: 600)"}) // add indicators (requires plugin)
 						.addTo(controller);					
 				</script>			
@@ -472,80 +504,51 @@
 								<a href="#" class="fab fa-twitter"></a>
 								<a href="#" class="fab fa-youtube"></a>
 							</div>
-						</div>
-						<div class="arte">
-							<div class="marco">
-								<img src="/img/comic.jpg" alt="comic">
-							</div>
-							<p>Fulano de tal</p>
-							<div class="bulb"></div>
-							<div class="light"></div>
-							<div class="socialLink">
-								<a href="#" class="fab fa-facebook-square"></a>
-								<a href="#" class="fab fa-instagram"></a>
-								<a href="#" class="fab fa-twitter"></a>
-								<a href="#" class="fab fa-youtube"></a>
-							</div>
 						</div>					
 					</div>
 				</div>
 			</div>
 		</div>
 		<div id="boletos">
-			<style>
-				#boletos {padding: 75px 0; }
-				#boletos .wrapper {display: flex; flex-direction: row; justify-content: space-around; flex-wrap: wrap;}
-				.ticket {display:flex; flex-direction: column; width: 30%; max-width: 350px; min-width: 285px; background: #FFF; border: 2px solid #FFF; color: #0076b5; padding-bottom: 25px; margin-top: 35px;}
-				.ticket p, .ticket h3 { display: block; margin: 10px auto 10px;}
-				.ticket h3 {height: 50px; text-align: center;}
-				.ticket div {width: 85%; margin: 5px auto 25px; height: 250px;}	
-				.ticketImg {display block; text-align: center; color: #FFF; font: 700 28px/20px "Alegreya Sans"; text-decoration:none; padding:0px 0 25px; margin-bottom:20px;}
-				.reg .ticketImg {background: url('../img/reg-bg.jpg');}
-				.vip .ticketImg {background: url('../img/vip-bg.jpg');}
-				.gen .ticketImg {background: url('../img/gen-bg.jpg');}
-				.gen .free {padding: 20px; background: #dbf6ff;}
-				.ticketImg img {display: block; margin: 0 auto; margin: 35px auto 25px;}
-				.ticketImg b {text-shadow:2px 0px 2px rgba(0, 0, 0, 0.5), 2px 0px 2px #081153}
-				.goplus {width: 85%; margin: auto; position: relative; bottom: 0;}
-				.vip .goplus {background: #f88800; url('../img/money.png') left bottom no-repeat;}
-				.vip .goplus:hover {background: #faa237;}
-				.gen .goplus {background: #acacac; border-color: #acacac;}
-				.reg .goplus {background: #299ed9; border-color:#299ed9; }
-				.reg .goplus:hover {background:#69b9e1; }
-			</style>
 			<div class="wrapper">
-				<div class="ticket reg">
-					<a href="#" class="ticketImg"><img src="/img/x.png" alt="entrada general"><b>X PACK</b></a>
-					<h3>Valor: ₡10,000 colones.<br><small>($16.50 dólares)*</small></h3>
-					<div>
-						<p class="where">Exclusivo de la tienda en línea.</p>
-						<p><strong>Incluye:</strong><br>+ Set de 3 postales diseñadas por reconocidos artitas de comic nacional. <b>100% coleccionables</b>.</p>
-						<p>+ Acceso de cortesía a Con-X: Convención Geek</p>
-					</div>
-						<a href="#" class="goplus" target="_blank">COMPRAR</a>
-				</div>
-				<div class="ticket vip">
-					<a href="#" class="ticketImg"><img src="/img/x.png" alt="entrada general"><b>GEEK PACK XL</b></a>
-					<h3>Valor: ₡40,000 colones.<br><small>($66.00 dólares)*</small></h3>
-					<div>
-						<p class="where">Exclusivo de la tienda en línea.</p>
-						<p><strong>Incluye:</strong><br>+ Set de postales exclusivas.<br>+ Camiseta oficial del evento.<br>+ Poster Premium Chumlee.<br>+ Poster Premium Laura Torres.<br>+ Regalia de los patrocinadores.<br>+ Acceso premium frente a tarima</p>
-						<p>+ Acceso de cortesía a Con-X: Convención Geek</p>
-					</div>
-					<a href="#" class="goplus" target="_blank">COMPRAR.</a>
-				</div>
-				<div class="ticket gen">
-					<a href="#" class="ticketImg"><img src="/img/x.png" alt="entrada general"><b>ENTRADA GENERAL</b></a>
-					<h3>Valor: ₡10,000 colones.</h3>
-					<div>
-						<p class="where">Se compra el mismo día del evento.</p>
-						<p>Acceso a todas las actividades.</p>
+				<h2>Entrada General:</h2>
+				<p>Con-X: Convención Geek le espera este 5 de Mayo, en el recinto más espetacular de nuestro país, desde ya le damos la bienvenida al Centro de Convenciones de Costa Rica (CCCR). Un lugar completamente equipado para comodidad de todos los asistentes.</p>
+				<div id="gen">
+					<div class="ticketImg"><img src="/img/x.png" alt="entrada general"></div>
+					<div id="genTxt">
+						<h3>Valor: ₡10,000 colones.</h3>
+						<p>La entrada general se pondrá <u>a la venta el mismo día del evento</u> y tendrá un valor de ₡10,000.00 colones para todo público. La compra se podrá realizar con tarjeta de crédito o efectivo. Recomendamos a los asistentes llevar el monto completo y adquirir sus boletos únicamente en las boleterías oficiales dentro del CCCR.</p>
 						<p class="free"><strong>Entrada gratis para:</strong><br>- Niños menores de 12 años.<br>- Adultos mayores.<br>- Personas con discapacidad.</p>
+						</p>				 
 					</div>
-					<p class="goplus">De venta el día del evento.</p>
 				</div>
+				<h2>Paquetes Promocionales Con-X.</h2>
+				<p><u>Ahorre dinero comprando los productos promocionales de Con-X: Convención Geek</u>, a través de nuestra nueva tienda en línea: <a href="https//plus-ultra.io" target="_blank" class="upNav">Plus-Ultra.io</a>, allí usted podrá adquirir todos los artículos oficiales de la convención y comprar con toda comodidad desde su casa u oficina.</p> 
+				<p>Encuentre también figuras y artículos exclusivos 100% originales e importados desde el Japón, ¡todo a muy buenos precios!.</p>
+				<div id="tickets">					
+					<div class="ticket reg">
+						<a href="#" class="ticketImg"><img src="/img/x.png" alt="entrada general"><b>X PACK</b></a>
+						<h3>Valor: ₡10,000 colones.<br><small>($16.50 dólares)*</small></h3>
+						<div>
+							<p class="where">Exclusivo de la tienda en línea.</p>
+							<p><strong>Incluye:</strong><br>+ Set de 3 postales exclusivas, diseñadas por reconocidos artitas e ilustradores costarricenses con reconocimiento internacional.<br> Todas son: <b>100% coleccionables</b>.</p>
+							<p class="free">La compra de este producto le obsequia un acceso de cortesía a Con-X: Convención Geek</p>
+						</div>
+						<a href="#" class="goplus" target="_blank">COMPRAR</a>
+					</div>
+					<div class="ticket vip">
+						<a href="#" class="ticketImg"><img src="/img/x.png" alt="entrada general"><b>GEEK PACK XL</b></a>
+						<h3>Valor: ₡40,000 colones.<br><small>($66.00 dólares)*</small></h3>
+						<div>
+							<p class="where">Exclusivo de la tienda en línea.</p>
+							<p><strong>Incluye:</strong><br>+ Set de postales exclusivas.<br>+ Camiseta oficial del evento.<br>+ Poster Premium y autógrafo Chumlee.<br>+ Poster Premium y autógrafo [actor de voz].<br>+ Regalia de los patrocinadores.<br>+ Acceso premium frente a tarima</p>
+							<p class="free">La compra de este producto le obsequia un acceso de cortesía a Con-X: Convención Geek</p>
+						</div>
+						<a href="#" class="goplus" target="_blank">COMPRAR.</a>
+					</div>
+				</div>
+				<p>(*) De momento, nuestro procesador de tarjetas de crédito y débito recibe el pago en moneda dólares únicamente, pedimos disculpas por los inconvenientes que esta situación pueda provocar.</p>
 			</div>
-			<p>(*) Nuestro procesador de tarjetas de crédito y débito recibe el pago en moneda dólares únicamente, pedimos disculpas por los inconvenientes que esta situación pueda provocar.</p>
 		</div>
 		<div id="final">
 			<div class="wrapper">
